--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
+    "express": "^4.16.4",
     "faker": "^4.1.0"
   },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/brentluna/dummy_data_server/issues"
   },
